--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "@types/node": "^22.9.0"
   },
   "dependencies": {
+    "adb-ts": "^6.1.0",
+    "adbkit": "^2.11.1",
+    "fluent-ffmpeg": "^2.1.3",
     "ws": "^8.18.0"
   }
 }
